# devcontainer-python-tmpl

./: .dockerignore  Makefile  README.md  pyproject.toml  rename.sh  replace-names.sh
.devcontainer/: compose.yaml  devcontainer.json  post-install.sh
app/: Dockerfile  pyproject.toml
docker/: Dockerfile
